# openclaw_eval

./: .gitignore  README.md  USER_MANUAL.md
apps/agent/: README.md  pyproject.toml
apps/agent/src/pinch_agent/: __init__.py  agent.py  cases.py  cli.py  tools.py
apps/api/: README.md  pyproject.toml
apps/api/src/pinch_api/: __init__.py  app.py  models.py  service.py
apps/router/: README.md  pyproject.toml
apps/router/config/: models.example.json
apps/router/examples/: trace.json
apps/router/src/pinch_router/: __init__.py  cli.py  context.py  engine.py  executor.py  schemas.py
apps/router/tests/: test_context.py  test_executor.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
apps/web/src/: main.tsx  styles.css
scripts/: demo.sh
